<resources>
    <string name="app_name">Areia e Brita</string>
    <string name="action_settings">Configurações</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="email">email</string>
    <string name="Quantidade">Insira uma quantidade</string>
    <string name="cliente">Cliente</string>
    <string name="Valor_venda">Valor da venda</string>
    <string name="entrar_no_sistema">Entrar no sistema</string>
    <string name="conf_saida">Conferência de Saída</string>
    <string name="conf_entrada">Conferência de Entrada</string>
    <string name="pedido_compra">Pedido de Compra</string>
    <string name="produtos">Produtos</string>
    <string name="pedido_venda">Pedido de Venda</string>
    <string name="texto_logo_empresa">Areia e Brita</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="clientes">Clientes</string>
    <string name="alterar_usuario">Alterar de usuário</string>
    <string name="lista_usuarios">Lista de usuários</string>
    <string name="cadastra_usuarios">Cadastro de usuário</string>
    <string name="cliente_dois_pontos">Cliente:</string>
    <string name="produto_dois_pontos">Produto:</string>
    <string name="endereco">endereco</string>
    <string name="alterar_cliente">Alterar cliente</string>
    <string name="cpf">cpf</string>
    <string name="telefone">telefone</string>
    <string name="cadastra_cliente">Cadastrar cliente</string>
    <string name="alterar_fornecedor">Alterar dados fornecedor</string>
    <string name="cadastra_fornecedor">Cadastrar fornecedor</string>
    <string name="cnpj">cnpj</string>
    <string name="alterar_produto">Alterar produto</string>
    <string name="exibirProduto">Exibir produto</string>
    <string name="fornecedor_dois_pontos">Fornecedor</string>
    <string name="valor_da_compra">Valor da compra</string>
    <string name="conferencia_de_saida">Conferência de Saída</string>
    <string name="cadastra_produto">Cadastrar produto</string>
    <string name="quandidade_dois_pontos">Quandidade:</string>
    <string name="preco_do_produto">Preço do produto:</string>
    <string name="et_preco_do_produto">Preço do produto</string>
    <string name="valor_item_venda_dois_pontos">Valor item venda:</string>
    <string name="valor_item_venda">Valor item venda</string>
    <string name="qtd_ponto">Qtd.</string>
    <string-array name="funcao_array">
        <item>Selecione a função</item>
        <item>Secretaria</item>
        <item>Estoque</item>
    </string-array>

    <string-array name="funcao_array_categoria">
        <item>Selecione a categoria</item>
        <item>Areia</item>
        <item>Brita</item>
    </string-array>

</resources>
