<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/areiabrita1"
    tools:context=".activities.LoginActivity"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="#80B1B0AB"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        >

        <EditText
            android:id="@+id/et_login_email"
            android:hint="@string/email"
            style="@style/AppEtxt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/AppEtxt"
            android:inputType="textPassword"
            android:hint="@string/senha" />

        <Button
            android:id="@+id/button"
            android:layout_width="222dp"
            android:layout_height="81dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_bt"
            android:onClick="logar"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif"
            tools:ignore="OnClick" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>