<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context=".activities.CadastroDeFornecedorActivity">

    <TextView
        android:id="@+id/tv_cadastro_fornecedor_nome"
        style="@style/AppTextV"
        android:text="Nome:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_cadastro_fornecedor_nome"
        style="@style/AppEtxt"
        android:hint="nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_fornecedor_nome" />

    <TextView
        android:id="@+id/tv_cadastro_fornecedor_email"
        style="@style/AppTextV"
        android:text="Email:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_nome" />

    <EditText
        android:id="@+id/et_cadastro_fornecedor_email"
        style="@style/AppEtxt"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_fornecedor_email" />


    <TextView
        android:id="@+id/tv_cadastro_fornecedor_cnpj"
        style="@style/AppTextV"
        android:text="CNPJ:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_email" />

    <EditText
        android:id="@+id/et_cadastro_fornecedor_cnpj"
        style="@style/AppEtxt"
        android:hint="@string/cnpj"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_fornecedor_cnpj" />

    <TextView
        android:id="@+id/tv_cadastro_fornecedor_end"
        style="@style/AppTextV"
        android:text="Endereço:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_cnpj" />

    <EditText
        android:id="@+id/et_cadastro_fornecedor_end"
        style="@style/AppEtxt"
        android:hint="@string/endereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_fornecedor_end" />

    <TextView
        android:id="@+id/tv_cadastro_fornecedor_telefone"
        style="@style/AppTextV"
        android:text="Telefone:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_end" />


    <EditText
        android:id="@+id/et_cadastro_fornecedor_telefone"
        style="@style/AppEtxt"
        android:hint="@string/telefone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_fornecedor_telefone" />
    <Button
        android:id="@+id/bt_cadastro_fornecedor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/selector_bt"
        android:onClick="cadastrarFornecedor"
        android:text="Salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_telefone" />
</androidx.constraintlayout.widget.ConstraintLayout>