<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CadastroPedidoDeVendaActivity">

    <TextView
        android:id="@+id/tv_cadastro_pedido_venda_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/cliente_dois_pontos"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spin_cadastro_pedido_venda_cliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spin_cadastro_pedido_venda_cliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/tv_cadastro_pedido_venda_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_venda_cliente" />

    <TextView
        android:id="@+id/tv_cadastro_pedido_venda_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/produto_dois_pontos"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spin_cadastro_pedido_venda_produto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_cadastro_pedido_venda_cliente" />

    <Spinner
        android:id="@+id/spin_cadastro_pedido_venda_produto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/et_cadastro_pedido_venda_quantidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_venda_produto" />

    <TextView
        android:id="@+id/tv_cadastro_pedido_venda_quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/quandidade_dois_pontos"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_cadastro_pedido_venda_quantidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_cadastro_pedido_venda_produto" />

    <EditText
        android:id="@+id/et_cadastro_pedido_venda_quantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/Quantidade"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_venda_quantidade" />

    <TextView
        android:id="@+id/tv_cadastro_pedido_venda_valor_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/preco_do_produto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_cadastro_pedido_venda_valor_produto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cadastro_pedido_venda_quantidade" />

    <EditText
        android:id="@+id/et_cadastro_pedido_venda_valor_produto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_venda_valor_produto" />

    <Button
        android:id="@+id/bt_cadastro_pedido_venda_lancar_pedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:onClick="registraItemVenda"
        android:text="Registra item de venda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cadastro_pedido_venda_valor_produto" />

    <Button
        android:id="@+id/bt_cadastro_pedido_venda_confirma_pedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="confirmarPedidoVenda"
        android:text="Confirma pedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_cancelar" />

    <Button
        android:id="@+id/bt_cadastro_pedido_venda_limpa_lista_itens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Limpa Lista de itens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido"
        android:onClick="limpaListaDeItensDeVenda"/>

    <Button
        android:id="@+id/bt_cadastro_pedido_venda_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="cancelaPedidoDeVenda"
        android:text="Cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_cadastro_pedido_venda_limpa_lista_itens"
        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido" />

    <ProgressBar
        android:id="@+id/pb_cadastro_pedido_venda_carregando"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:progressTint="#F50202"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>