<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context="com.example.frontpi4.activities.CadastroPedidoDeCompraActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.frontpi4.activities.CadastroPedidoDeCompraActivity">

            <Button
                android:id="@+id/bt_cadastro_pedido_compra_lancar_pedido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/selector_bt"
                android:onClick="registraItemCompra"
                android:text="Registra item de compra"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_cadastro_pedido_compra_valor" />

            <Button
                android:id="@+id/bt_cadastro_pedido_compra_confirma_pedido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/selector_bt"
                android:onClick="confirmarPedidoCompra"
                android:text="Confirma pedido"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lab_cadastro_compra_total" />

            <Button
                android:id="@+id/bt_cadastro_pedido_compra_limpa_lista_itens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bt"
                android:onClick="limpaListaDeItensDeCompra"
                android:text="Limpa Lista de itens"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_compra_lancar_pedido" />

            <Button
                android:id="@+id/bt_cadastro_pedido_compra_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/selector_bt"
                android:onClick="cancelaPedidoDeCompra"
                android:text="Cancelar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_cadastro_pedido_compra_limpa_lista_itens"
                app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_compra_lancar_pedido" />

            <EditText
                android:id="@+id/et_cadastro_pedido_compra_quantidade"
                style="@style/AppEtxt"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/Quantidade"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_cadastro_pedido_compra_produto" />

            <EditText
                android:id="@+id/et_cadastro_pedido_compra_valor"
                style="@style/AppEtxt"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/valor_da_compra"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_cadastro_pedido_compra_quantidade" />

            <ProgressBar
                android:id="@+id/pb_cadastro_pedido_compra_carregando"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:progressTint="#F50202"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.471"
                tools:ignore="MissingConstraints"
                tools:visibility="invisible" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="2dp" />

            <Spinner
                android:id="@+id/spin_cadastro_pedido_compra_fornecedor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                app:layout_constraintBottom_toTopOf="@+id/tv_cadastro_pedido_compra_produto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_compra_fornecedor" />

            <Spinner
                android:id="@+id/spin_cadastro_pedido_compra_produto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                app:layout_constraintBottom_toTopOf="@+id/et_cadastro_pedido_compra_quantidade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_compra_produto" />

            <TextView
                android:id="@+id/tv_cadastro_pedido_compra_fornecedor"
                style="@style/AppTextV"
                android:layout_marginTop="8dp"
                android:text="@string/fornecedor_dois_pontos"
                app:layout_constraintBottom_toTopOf="@+id/spin_cadastro_pedido_compra_fornecedor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_cadastro_pedido_compra_produto"
                style="@style/AppTextV"
                android:text="@string/produto_dois_pontos"
                app:layout_constraintBottom_toTopOf="@+id/spin_cadastro_pedido_compra_produto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_cadastro_pedido_compra_fornecedor" />

            <TextView
                android:id="@+id/tv_lab_cadastro_compra_total"
                android:layout_width="180dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/darker_gray"
                android:fontFamily="sans-serif-black"
                android:text="Total"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_todos_itenscompra" />

            <TextView
                android:id="@+id/tv_cadastro_pedido_compra_total"
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/darker_gray"
                android:textAlignment="viewEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_lab_cadastro_compra_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_lab_cadastro_compra_total"
                app:layout_constraintTop_toTopOf="@+id/tv_lab_cadastro_compra_total"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_todos_itenscompra"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_compra_limpa_lista_itens" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
